Fix z-index and move cube-bg closer to the bottom
Adjust z-index and move bg closer to the bottom

--- a/src/style.css
+++ b/src/style.css
@@ -38,15 +38,15 @@ textarea {
 
 #sidebar-bg{
   background-image: url(/src/imgs/rubik.png);
-  background-position: center;
+  background-position: center bottom;
   background-repeat: no-repeat;
   background-size: 80%;
-  opacity: 35%;
+  opacity: 90%;
   width: 100%;
   height: 100%;
   position: absolute;
   left:0;
-  top:0;
+  bottom: 100px;
   pointer-events: none;
   transition: opacity 0.5s;
 }
@@ -84,6 +84,7 @@ footer p {
   flex-direction: column;
   border: whitesmoke 5px solid;
   border-radius: 10px;
+  z-index: 10;
 }
 
 #h-sidebar {
@@ -130,7 +131,6 @@ main .divider {
 #add-project-container {
   display: flex;
   justify-content: flex-start;
-  cursor: pointer;
 }
 
 #add-project {
@@ -140,6 +140,7 @@ main .divider {
   font-weight: bold;
   padding: 5px 15px 5px 5px;
   border-radius: 3px;
+  cursor: pointer;
 }
 
 #add-project p {
@@ -186,6 +187,7 @@ main .divider {
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 10;
 }
 
 #add-task-form {
